[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "soupsavvy"
readme = "README.md"
description = "Powerful and flexible search engine for BeautifulSoup"
authors = [{name = "sewcio543"}]
license = {file = "LICENSE"}
requires-python = ">=3.9"

keywords = ["web-scraping", "html", "soup", "bs4", "markup", "beautifulsoup", "css"]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",

  "License :: OSI Approved :: MIT License",

  "Operating System :: OS Independent",

  # supported python versions
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
version = {attr = "soupsavvy.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
lxml = ["lxml", "cssselect"]
bs4 = ["beautifulsoup4", "soupsieve"]
selenium = ["selenium"]

[tool.setuptools]
packages = ["soupsavvy"]

[project.urls]
Repository = "https://github.com/sewcio543/soupsavvy"
Homepage  = "https://soupsavvy.readthedocs.io"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
disable_error_code = "overload-overlap, misc, annotation-unchecked, empty-body"
